--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -842,6 +842,37 @@ DOMAIN-SUFFIX,copilot.microsoft.com,Proxy
 DOMAIN-SUFFIX,hoyolab.com,Proxy
 # 防止 bing 地区检测
 DOMAIN-SUFFIX,location.microsoft.com,Proxy
+# NAME: OpenAI,Proxy
+DOMAIN,browser-intake-datadoghq.com,Proxy
+DOMAIN,static.cloudflareinsights.com,Proxy
+DOMAIN-SUFFIX,ai.com,Proxy
+DOMAIN-SUFFIX,algolia.net,Proxy
+DOMAIN-SUFFIX,api.statsig.com,Proxy
+DOMAIN-SUFFIX,auth0.com,Proxy
+DOMAIN-SUFFIX,cdn.cloudflare.net,Proxy
+DOMAIN-SUFFIX,challenges.cloudflare.com,Proxy
+DOMAIN-SUFFIX,chatgpt.livekit.cloud,Proxy
+DOMAIN-SUFFIX,client-api.arkoselabs.com,Proxy
+DOMAIN-SUFFIX,events.statsigapi.net,Proxy
+DOMAIN-SUFFIX,featuregates.org,Proxy
+DOMAIN-SUFFIX,host.livekit.cloud,Proxy
+DOMAIN-SUFFIX,identrust.com,Proxy
+DOMAIN-SUFFIX,intercom.io,Proxy
+DOMAIN-SUFFIX,intercomcdn.com,Proxy
+DOMAIN-SUFFIX,launchdarkly.com,Proxy
+DOMAIN-SUFFIX,oaistatic.com,Proxy
+DOMAIN-SUFFIX,oaiusercontent.com,Proxy
+DOMAIN-SUFFIX,observeit.net,Proxy
+DOMAIN-SUFFIX,poe.com,Proxy
+DOMAIN-SUFFIX,segment.io,Proxy
+DOMAIN-SUFFIX,sentry.io,Proxy
+DOMAIN-SUFFIX,stripe.com,Proxy
+DOMAIN-SUFFIX,turn.livekit.cloud,Proxy
+DOMAIN-KEYWORD,openai,Proxy
+IP-CIDR,24.199.123.28/32,no-resolve,Proxy
+IP-CIDR,64.23.132.171/32,no-resolve,Proxy
+IP-ASN,20473,no-resolve,Proxy
+
 
 
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleNews/AppleNews.list,PROXY
